--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/es5-shim/4.1.3/es5-sham.min.js"></script>
   <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDeBQdNm0scLyiZ5jFOWBF_7kvFZQ1eJw8&libraries=places"></script>
 </head>
 <body>
   <div id="app"></div>
-  <script src="js/index.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
